[gd_scene load_steps=9 format=3 uid="uid://24e0kif4kkdt"]

[ext_resource type="Script" path="res://gameplay/backpack/Backpack.gd" id="1_v6j3i"]
[ext_resource type="Texture2D" uid="uid://ct5h3dyyxyblj" path="res://art/pack_1.png" id="2_80h0r"]
[ext_resource type="AudioStream" uid="uid://bxgblql1u8dhe" path="res://sound/bag_drop.wav" id="3_a0h7p"]
[ext_resource type="AudioStream" uid="uid://bmkd5fn01mky2" path="res://sound/item_added.wav" id="3_p4sdx"]
[ext_resource type="AudioStream" uid="uid://cemabdt5yr5oc" path="res://sound/item_rejected.wav" id="4_stjcx"]
[ext_resource type="AudioStream" uid="uid://dvlt1knfeyk5c" path="res://sound/pickup.wav" id="5_cwn6i"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2k672"]
size = Vector2(128, 128)

[sub_resource type="Curve" id="Curve_1s5st"]
_data = [Vector2(0.00363636, 1), 0.0, 0.0, 0, 0, Vector2(0.483636, 1), 0.0, 0.0, 0, 0, Vector2(0.763636, 0), 0.0, 0.0, 0, 0]
point_count = 3

[node name="Backpack" type="Area2D"]
z_index = 2
script = ExtResource("1_v6j3i")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_2k672")

[node name="ShadowSprite" type="Sprite2D" parent="."]
modulate = Color(0.407843, 0.407843, 0.407843, 0.47451)
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_80h0r")

[node name="PackSprite" type="Sprite2D" parent="."]
z_index = 3
scale = Vector2(0.9, 0.9)
texture = ExtResource("2_80h0r")

[node name="ItemAddedParticles" type="CPUParticles2D" parent="."]
z_index = 1
scale = Vector2(0.9, 0.9)
emitting = false
amount = 16
one_shot = true
explosiveness = 0.75
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 500.0
initial_velocity_max = 750.0
damping_min = 2000.0
damping_max = 2000.0
scale_amount_min = 10.0
scale_amount_max = 20.0
scale_amount_curve = SubResource("Curve_1s5st")

[node name="SFX_BagDrop" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_a0h7p")

[node name="SFX_ItemAdded" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_p4sdx")

[node name="SFX_ItemRejected" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_stjcx")

[node name="SFX_Pickup" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_cwn6i")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
